# voip-utils

./: .gitignore  CHANGELOG.md  README.md  call_example.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml  release.yml
script/: format  lint  package  setup
tests/: __init__.py  test_pyaudioop.py  test_sip.py
voip_utils/: __init__.py  call_phone.py  const.py  pyaudioop.py  rtp_audio.py  sip.py  util.py  voip.py
